Fixed Issue with Subscribe Page on Mobile Devices

--- a/css/768px.css
+++ b/css/768px.css
@@ -77,7 +77,7 @@
 	}
 
 	#mce-EMAIL {
-		width: 338px;
+		width: 350px;
 		margin: 16px 0px;
 	}
 }
